test(bot): nests tests